下单Long数量支持 (#3)
Co-authored-by: Hophenby <1094009969@qq.com>